--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@ a {
   </div>
   </div>
   <form action="search" method="post">
-  <p class="googlogo"><img src="https://www.supermarketnews.com/sites/supermarketnews.com/files/styles/article_featured_retina/public/fetch-logo-promo.gif?itok=Ax9jQh_m" class="google"><br>
+  <p class="googlogo"><img src="https://www.ionos.com/digitalguide/fileadmin/DigitalGuide/Teaser/google-search-t.jpg" class="google"><br>
     
     <input type="search" id="search"name="searchbar" placeholder="Search Brand/Category/Retailer..." value="{{request.form.searchbar}}"><br>
     <br>
